--- a/base/templates/base/category_manipulations/add_category.html
+++ b/base/templates/base/category_manipulations/add_category.html
@@ -14,7 +14,7 @@
                         {{ category }}
                     </option>
                 {% endfor %}
-                <option value="בלי">
+                <option value="no_cat_parent">
                     ללא קטגורית אב
                 </option>
             </select>
