--- a/base/templates/base/user_manipulations/edit_user.html
+++ b/base/templates/base/user_manipulations/edit_user.html
@@ -1,6 +1,6 @@
 {% extends "main.html" %}
 {% block content %}
-    <div class="add_user">
+    <div class="add_user" {% if editing_moderator %} style="height: 135em;" {% endif %}>
         <form action="" method="POST" class="add-user-form">
             {% csrf_token %}
             <label for="identity_num">ת.ז</label>
@@ -33,15 +33,87 @@
                    name="email"
                    value="{{ user.email }}"
                    required>
-            <label for="role">תפקיד</label>
+            <label for="role">סטטוס</label>
             <select name="role" id="role">
-                <option value="student" selected required>
+                <option value="student" {% if user.role == "student" %}selected{% endif %} required>
                     סטודנט
                 </option>
-                <option value="lecturer" required>
+                <option value="lecturer" {% if user.role == "lecturer" %}selected{% endif %} required>
                     מרצה
                 </option>
+                {% if editing_moderator %}
+                    <option value="" {% if not user.role or user.role == "" %}selected{% endif %} required>
+                        אחר
+                    </option>
+                {% endif %}
             </select>
+            {% if editing_moderator %}
+                <label>הרשאות</label>
+                <hr>
+                <label for="add_product">הוספת פריט</label>
+                <select name="add_product" id="add_product">
+                    <option value="1" {% if moderator.add_product %}selected{% endif %} required>
+                        כן
+                    </option>
+                    <option value="0" {% if not moderator.add_product %}selected{% endif %} required>
+                        לא
+                    </option>
+                </select>
+                <label for="edit_product">עריכת פריט</label>
+                <select name="edit_product" id="edit_product">
+                    <option value="1" {% if moderator.edit_product %}selected{% endif %} required>
+                        כן
+                    </option>
+                    <option value="0" {% if not moderator.edit_product %}selected{% endif %} required>
+                        לא
+                    </option>
+                </select>
+                <label for="delete_product">מחיקת פריט</label>
+                <select name="delete_product" id="delete_product">
+                    <option value="1" {% if moderator.delete_product %}selected{% endif %} required>
+                        כן
+                    </option>
+                    <option value="0" {% if not moderator.delete_product %}selected{% endif %} required>
+                        לא
+                    </option>
+                </select>
+                <label for="approve_return">אישור החזרת פריט</label>
+                <select name="approve_return" id="approve_return">
+                    <option value="1" {% if moderator.approve_return %}selected{% endif %} required>
+                        כן
+                    </option>
+                    <option value="0" {% if not moderator.approve_return %}selected{% endif %} required>
+                        לא
+                    </option>
+                </select>
+                <label for="approve_request">אישור בקשת השאלה</label>
+                <select name="approve_request" id="approve_request">
+                    <option value="1" {% if moderator.approve_request %}selected{% endif %} required>
+                        כן
+                    </option>
+                    <option value="0" {% if not moderator.approve_request %}selected{% endif %} required>
+                        לא
+                    </option>
+                </select>
+                <label for="reject_request">דחית בקשת השאלה</label>
+                <select name="reject_request" id="reject_request">
+                    <option value="1" {% if moderator.reject_request %}selected{% endif %} required>
+                        כן
+                    </option>
+                    <option value="0" {% if not moderator.reject_request %}selected{% endif %} required>
+                        לא
+                    </option>
+                </select>
+                <label for="finish_borrowing">סיום השאלה</label>
+                <select name="finish_borrowing" id="finish_borrowing">
+                    <option value="1" {% if moderator.finish_borrowing %}selected{% endif %} required>
+                        כן
+                    </option>
+                    <option value="0" {% if not moderator.finish_borrowing %}selected{% endif %} required>
+                        לא
+                    </option>
+                </select>
+            {% endif %}
             <div>
                 <input type="submit" value="לשמור">
             </div>
