--- a/base/templates/base/user_manipulations/moderators.html
+++ b/base/templates/base/user_manipulations/moderators.html
@@ -29,7 +29,7 @@
                     <tr>
                         <td>
                             <div class="prod-buttons">
-                                <a href="{% url 'delete_moderator' moderator.pk %}" class="edit-btn">למחוק</a>
+                                <a href="{% url 'delete_user' moderator.pk %}" class="edit-btn">למחוק</a>
                             </div>
                         </td>
                         <td>
