--- a/base/templates/base/requests/add_request.html
+++ b/base/templates/base/requests/add_request.html
@@ -26,6 +26,7 @@
                    required>
             <label for="exp_date_to_return">תאריך החזרה רצוי</label>
             <input type="datetime-local"
+                   value="{{ init_value2 }}"
                    id="exp_date_to_return"
                    name="exp_date_to_return"
                    disabled
@@ -33,7 +34,7 @@
             <label for="comments">הערות</label>
             <input type="text" id="comments" name="comments">
             <div>
-                <input type="submit" value="שלח/י">
+                <input type="submit" value="שלח/י בקשה">
             </div>
         </form>
     </div>
