--- a/base/templates/base/borrowings/borrowings.html
+++ b/base/templates/base/borrowings/borrowings.html
@@ -1,7 +1,7 @@
 {% extends "main.html" %}
 {% block content %}
     <div class="borrowings-page-admin">
-        {% if user_type == "admin" %}
+        {% if user_type == "admin" or user_type == "moderator" %}
             <form method="GET">
                 <button type="submit">חפש/י</button>
                 <input type="text" id="identity_num" name="identity_num">
@@ -10,7 +10,7 @@
         {% endif %}
         <table>
             <caption>
-                {% if user_type == "admin" %}
+                {% if user_type == "admin" or user_type == "moderator" %}
                     {{category}} מידע על השאלות של סטודנטים/מרצים
                     {% if category %} של קטגורית {% endif %}
                 {% else %}
@@ -21,13 +21,13 @@
                 <col span="8">
             </colgroup>
             <thead>
-                {% if user_type == "admin" %}
+                {% if user_type == "admin" or user_type == "moderator" %}
                     <tr>
                         <th>סיום השאלה</th>
                         <th>בקשת הארכה</th>
                         <th>תאריך החזרה</th>
                         <th>תאריך השאלה</th>
-                        <th>תפקיד</th>
+                        <th>סטטוס</th>
                         <th>מייל</th>
                         <th>מס' טלפון</th>
                         <th>שם הפריט</th>
@@ -47,24 +47,55 @@
                 {% endif %}
             </thead>
             <tbody>
-                {% if user_type == "admin" %}
+                {% if user_type == "admin" or user_type == "moderator" %}
                     {% for borrowing in borrowings %}
-                        <tr style="background-color: {% if borrowing.extension_requested %} rgb(255, 171, 0) {% elif now > borrowing.date_to_return %} rgb(254, 100, 100){% endif %}">
+                        <tr style="background-color:
+                            {% if now > borrowing.date_to_return %} rgb(254, 100, 100)
+                            {% elif borrowing.extension_requested %} rgb(255, 171, 0)
+                            {% elif borrowing.user.is_mod %} rgb(0, 116, 217)
+                            {% endif %}">
                             <td>
                                 <div class="prod-buttons">
-                                    <a href="{% url 'finish_borrowing' borrowing.id %}"
+                                    <a href="{% if borrowing.user.pk != user.pk %}{% url 'finish_borrowing' borrowing.id %}{% else %}#{% endif %}"
                                        class="edit-btn">לסיים</a>
                                 </div>
                             </td>
-                            <td>
-                                <div class="prod-buttons">
-                                    <a href="{% if borrowing.extension_requested %}{% url 'borrowing_extension' borrowing.id %}{% else %}#{% endif %}"
-                                       class="edit-btn" >לצפות</a>
-                                </div>
-                            </td>
+                            {% if user_type == "admin" %}
+                                <td>
+                                    <div class="prod-buttons">
+                                        <a href="{% if borrowing.extension_requested %}{% url   'borrowing_extension' borrowing.id %}{% else %}#{% endif %}"
+                                           class="edit-btn" >לצפות</a>
+                                    </div>
+                                </td>
+                            {% endif %}
+                            {% if user_type == "moderator" %}
+                                <td>
+                                    {% if not borrowing.extension_requested %}
+                                        <div class="prod-buttons">
+                                            <a href="{% if borrowing.user.pk == user.pk %}{% url 'add_borrowing_extension' borrowing.id %}{% else %}#{% endif %}"
+                                               class="edit-btn">בקשה להארכה</a>
+                                        </div>
+                                    {% else %}
+                                        בקשת הארכה ל-{{ borrowing.additional_days }}
+                                        {% if borrowing.additional_days > 1 %}
+                                            ימים
+                                        {% else %}
+                                            יום
+                                        {% endif %}
+                                    {% endif %}
+                                </td>
+                            {% endif %}
                             <td>{{ borrowing.date_to_return|date:"SHORT_DATETIME_FORMAT" }}</td>
                             <td>{{ borrowing.borrowed_at|date:"SHORT_DATETIME_FORMAT" }}</td>
-                            <td>{{ borrowing.user.role }}</td>
+                            <td>
+                                {% if borrowing.user.role == "student" %}
+                                    סטודנט
+                                {% elif borrowing.user.role == "lecturer" %}
+                                    מרצה
+                                {% else %}
+                                    אחר
+                                {% endif %}
+                            </td>
                             <td>{{ borrowing.user.email }}</td>
                             <td>{{ borrowing.user.mobile_num }}</td>
                             <td>{{ borrowing.product.name }}</td>
