--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,6 +20,7 @@
             {% include "base/navbar_buttons/contact_us_button.html" %}
             {% if user_type == "admin" %}
                 {% include "base/navbar_buttons/statistics_button.html" %}
+                {% include "base/navbar_buttons/in_repair_button.html" %}
             {% endif %}
             {% include "base/navbar_buttons/requests_button.html" %}
             {% include "base/navbar_buttons/borrowings_button.html" %}
