--- a/base/templates/base/user_manipulations/add_user.html
+++ b/base/templates/base/user_manipulations/add_user.html
@@ -72,17 +72,8 @@
                         לא
                     </option>
                 </select>
-                <label for="approve_return">אישור החזרת פריט</label>
-                <select name="approve_return" id="approve_return">
-                    <option value="1" selected required>
-                        כן
-                    </option>
-                    <option value="0" required>
-                        לא
-                    </option>
-                </select>
-                <label for="approve_request">אישור בקשת השאלה</label>
-                <select name="approve_request" id="approve_request">
+                <label for="accept_request">אישור בקשת השאלה</label>
+                <select name="accept_request" id="accept_request">
                     <option value="1" selected required>
                         כן
                     </option>
