--- a/base/templates/base/login/main.html
+++ b/base/templates/base/login/main.html
@@ -26,7 +26,7 @@
             {% endif %}
         </div>
     </body>
-    <footer>
+    {% comment %} <footer>
         {% include "footer.html" %}
-    </footer>
+    </footer> {% endcomment %}
 </html>
