--- a/base/templates/base/panel_buttons/in_repair_button.html
+++ b/base/templates/base/panel_buttons/in_repair_button.html
@@ -7,6 +7,6 @@
              xmlns="http://www.w3.org/2000/svg">
             <img style="margin-right: 15px;" src="https://cdn-icons-png.flaticon.com/512/75/75668.png" width="50" height="50" />
         </svg>
-        בתיקון
+        פריטים בתיקון
     </a>
 </div>
