--- a/base/templates/base/in_repair_manipulations/in_repair.html
+++ b/base/templates/base/in_repair_manipulations/in_repair.html
@@ -16,7 +16,7 @@
             </colgroup>
             <thead>
                 <tr>
-                    {% if mod_mark_repaired %}<th>תיקון הפריט</th>{% endif %}
+                    {% if user_type == "admin" and mod_mark_repaired %}<th>תיקון הפריט</th>{% endif %}
                     <th>פרטי תקלה</th>
                     <th>תאריך תקלה</th>
                     <th>סטטוס</th>
@@ -32,10 +32,10 @@
             <tbody>
                 {% for breakage in breakages %}
                     <tr>
-                        {% if mod_mark_repaired %}
+                        {% if user_type == "admin" and mod_mark_repaired %}
                             <td>
                                 <div class="prod-buttons">
-                                    <a href="{% if breakage.user.pk != user.pk %}{% url 'mark_repaired' breakage.pk %}{% else %}#{% endif %}"
+                                    <a href="{% if breakage.user.is_admin or breakage.user.pk != user.pk %}{% url 'mark_repaired' breakage.pk %}{% else %}#{% endif %}"
                                        class="edit-btn">לסמן כתוקן</a>
                                 </div>
                             </td>
