--- a/base/templates/base/panels/moderator_panel.html
+++ b/base/templates/base/panels/moderator_panel.html
@@ -4,5 +4,6 @@
         {% include "base/panel_buttons/requests_button.html" %}
         {% include "base/panel_buttons/borrowings_button.html" %}
         {% include "base/panel_buttons/contact_us_button.html" %}
+        {% include "base/panel_buttons/in_repair_button.html" %}
     </div>
 {% endblock content %}
