--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,6 +20,8 @@
             {% include "base/navbar_buttons/contact_us_button.html" %}
             {% if user_type == "admin" %}
                 {% include "base/navbar_buttons/statistics_button.html" %}
+            {% endif %}
+            {% if user_type == "admin" or user_type == "moderator" %}
                 {% include "base/navbar_buttons/in_repair_button.html" %}
             {% endif %}
             {% include "base/navbar_buttons/requests_button.html" %}
