--- a/base/templates/base/in_repair_manipulations/in_repair.html
+++ b/base/templates/base/in_repair_manipulations/in_repair.html
@@ -16,23 +16,23 @@
             </colgroup>
             <thead>
                 <tr>
-                    {% if user_type == "admin" and mod_mark_repaired %}<th>תיקון הפריט</th>{% endif %}
+                    {% if user_type == "admin" or mod_mark_repaired %}<th>תיקון הפריט</th>{% endif %}
                     <th>פרטי תקלה</th>
                     <th>תאריך תקלה</th>
                     <th>סטטוס</th>
                     <th>מייל</th>
                     <th>מס' טלפון</th>
-                    <th>שם הפריט</th>
-                    <th>מק''ט הפריט</th>
                     <th>שם משפחה</th>
                     <th>שם פרטי</th>
                     <th>ת.ז</th>
+                    <th>שם הפריט</th>
+                    <th>מק''ט הפריט</th>
                 </tr>
             </thead>
             <tbody>
-                {% for breakage in breakages %}
+                {% for breakage in products_in_repair %}
                     <tr>
-                        {% if user_type == "admin" and mod_mark_repaired %}
+                        {% if user_type == "admin" or mod_mark_repaired %}
                             <td>
                                 <div class="prod-buttons">
                                     <a href="{% if breakage.user.is_admin or breakage.user.pk != user.pk %}{% url 'mark_repaired' breakage.pk %}{% else %}#{% endif %}"
@@ -45,7 +45,7 @@
                                 <a href="{% url 'breakage' breakage.pk %}" class="edit-btn">לצפות</a>
                             </div>
                         </td>
-                        <td>{{ breakage.broke_ats|date:"SHORT_DATETIME_FORMAT" }}</td>
+                        <td>{{ breakage.broke_at|date:"SHORT_DATETIME_FORMAT" }}</td>
                         <td>
                             {% if breakage.user.role == "student" %}
                                 סטודנט
@@ -57,11 +57,11 @@
                         </td>
                         <td>{{ breakage.user.email }}</td>
                         <td>{{ breakage.user.mobile_num }}</td>
-                        <td>{{ breakage.product.name }}</td>
-                        <td>{{ breakage.product.stock_num }}</td>
                         <td>{{ breakage.user.last_name }}</td>
                         <td>{{ breakage.user.first_name }}</td>
                         <td>{{ breakage.user.identity_num }}</td>
+                        <td>{{ breakage.product.name }}</td>
+                        <td>{{ breakage.product.stock_num }}</td>
                     </tr>
                 {% endfor %}
             </tbody>
