--- a/base/templates/base/panel_buttons/breakages_button.html
+++ b/base/templates/base/panel_buttons/breakages_button.html
@@ -1,5 +1,5 @@
 <div class="home-card">
-    <a href="{% url 'in_repair' %}">
+    <a href="{% url 'breakages' %}">
         <svg width="50px"
              height="50px"
              viewBox="0 0 24 24"
