--- a/base/templates/base/user_manipulations/add_user.html
+++ b/base/templates/base/user_manipulations/add_user.html
@@ -81,7 +81,7 @@
                         לא
                     </option>
                 </select>
-                <label for="reject_request">דחית בקשת השאלה</label>
+                <label for="reject_request">דחיית בקשת השאלה</label>
                 <select name="reject_request" id="reject_request">
                     <option value="1" selected required>
                         כן
@@ -92,6 +92,15 @@
                 </select>
                 <label for="finish_borrowing">סיום השאלה</label>
                 <select name="finish_borrowing" id="finish_borrowing">
+                    <option value="1" selected required>
+                        כן
+                    </option>
+                    <option value="0" required>
+                        לא
+                    </option>
+                </select>
+                <label for="mark_repaired">סימון פריט כתוקן</label>
+                <select name="mark_repaired" id="mark_repaired">
                     <option value="1" selected required>
                         כן
                     </option>
