--- a/base/templates/base/borrowing_manipulations/borrowings.html
+++ b/base/templates/base/borrowing_manipulations/borrowings.html
@@ -23,6 +23,9 @@
             <thead>
                 {% if user_type == "admin" or user_type == "moderator" %}
                     <tr>
+                        {% if user_type == "moderator" %}
+                            <th>דיווח תקלה</th>
+                        {% endif %}
                         {% if user_type == "admin" or mod_finish_borrowing %}
                             <th>סיום השאלה</th>
                         {% endif %}
@@ -40,6 +43,7 @@
                     </tr>
                 {% else %}
                     <tr>
+                        <th>דיווח תקלה</th>
                         <th>בקשת הארכה</th>
                         <th>תאריך החזרה</th>
                         <th>תאריך השאלה</th>
@@ -52,10 +56,18 @@
                 {% if user_type == "admin" or user_type == "moderator" %}
                     {% for borrowing in borrowings %}
                         <tr style="background-color:
-                            {% if now > borrowing.date_to_return %} rgb(254, 100, 100)
+                            {% if borrowing.product.breakage_reported %} rgb(112, 128, 144)
                             {% elif borrowing.extension_requested %} rgb(255, 171, 0)
+                            {% elif now > borrowing.date_to_return %} rgb(254, 100, 100)
                             {% elif borrowing.user.is_mod %} rgb(0, 116, 217)
                             {% endif %}">
+                            {% if user_type == "moderator" %}
+                                <td>
+                                    <div class="prod-buttons">
+                                        <a href="{% if borrowing.user.pk == user.pk and not borrowing.product.breakage_reported %}{% url 'report_breakage' borrowing.product.pk %}{% else %}#{% endif %}" class="edit-btn">לדווח תקלה</a>
+                                    </div>
+                                </td>
+                            {% endif %}
                             {% if user_type == "admin" or mod_finish_borrowing %}
                                 <td>
                                     <div class="prod-buttons">
@@ -67,7 +79,7 @@
                                 <td>
                                     <div class="prod-buttons">
                                         <a href="{% if borrowing.extension_requested %}{% url   'borrowing_extension' borrowing.pk %}{% else %}#{% endif %}"
-                                           class="edit-btn" >לצפות</a>
+                                           class="edit-btn">לצפות</a>
                                     </div>
                                 </td>
                             {% endif %}
@@ -75,7 +87,7 @@
                                 <td>
                                     {% if not borrowing.extension_requested %}
                                         <div class="prod-buttons">
-                                            <a href="{% if borrowing.user.pk == user.pk %}{% url 'add_borrowing_extension' borrowing.pk %}{% else %}#{% endif %}"
+                                            <a href="{% if borrowing.user.pk == user.pk and not borrowing.product.breakage_reported %}{% url 'add_borrowing_extension' borrowing.pk %}{% else %}#{% endif %}"
                                                class="edit-btn">בקשה להארכה</a>
                                         </div>
                                     {% else %}
@@ -110,12 +122,20 @@
                     {% endfor %}
                 {% else %}
                     {% for borrowing in borrowings %}
-                        <tr style="background-color: {% if borrowing.extension_requested %} rgb(255, 171, 0) {% elif now > borrowing.date_to_return %} rgb(254, 100, 100){% endif %}">
+                        <tr style="background-color:
+                            {% if borrowing.product.breakage_reported %} rgb(112, 128, 144)
+                            {% elif borrowing.extension_requested %} rgb(255, 171, 0)
+                            {% elif now > borrowing.date_to_return %} rgb(254, 100, 100)
+                            {% endif %}">
+                            <td>
+                                <div class="prod-buttons">
+                                    <a href="{% if not borrowing.product.breakage_reported %}{% url 'report_breakage' borrowing.product.pk %}{% else %}#{% endif %}" class="edit-btn">לדווח תקלה</a>
+                                </div>
+                            </td>
                             <td>
                                 {% if not borrowing.extension_requested %}
                                     <div class="prod-buttons">
-                                        <a href="{% url 'add_borrowing_extension' borrowing.id %}"
-                                           class="edit-btn">בקשה להארכה</a>
+                                        <a href="{% if not borrowing.product.breakage_reported %}{% url 'add_borrowing_extension' borrowing.id %}{% else %}#{% endif %}" class="edit-btn">בקשה להארכה</a>
                                     </div>
                                 {% else %}
                                     בקשת הארכה ל-{{ borrowing.additional_days }}
