--- a/base/templates/base/breakage_manipulations/breakages.html
+++ b/base/templates/base/breakage_manipulations/breakages.html
@@ -16,7 +16,7 @@
             </colgroup>
             <thead>
                 <tr>
-                    {% if user_type == "admin" or mod_mark_repaired %}<th>תיקון הפריט</th>{% endif %}
+                    {% if user_type == "admin" or mod_mark_repaired %}<th>תקינות הפריט</th>{% endif %}
                     <th>פרטי תקלה</th>
                     <th>תאריך תקלה</th>
                     <th>סטטוס</th>
@@ -31,18 +31,29 @@
             </thead>
             <tbody>
                 {% for breakage in products_in_repair %}
-                    <tr>
+                    <tr style="background-color: {% if breakage.user.is_mod %} rgb(0, 116, 217) {% endif %}">
                         {% if user_type == "admin" or mod_mark_repaired %}
                             <td>
+                            {% if user_type == "admin" %}
+                                {% if not breakage.product.in_repair %}
+                                    <div class="prod-buttons">
+                                        <a href="{% url 'send_for_repair' breakage.pk %}" class="edit-btn">לשלוח לתיקון</a>
+                                    </div>
+                                {% else %}
+                                    <div class="prod-buttons">
+                                        <a href="{% url 'mark_repaired' breakage.pk %}" class="edit-btn">לסמן כתוקן</a>
+                                    </div>
+                                {% endif %}
+                            {% elif mod_mark_repaired %}
                                 <div class="prod-buttons">
-                                    <a href="{% if breakage.user.is_admin or breakage.user.pk != user.pk %}{% url 'mark_repaired' breakage.pk %}{% else %}#{% endif %}"
-                                       class="edit-btn">לסמן כתוקן</a>
+                                    <a href="{% if breakage.product.in_repair and breakage.user.pk != user.pk %}{% url 'mark_repaired' breakage.pk %}{% else %}#{% endif %}" class="edit-btn">לסמן כתוקן</a>
                                 </div>
+                            {% endif %}
                             </td>
                         {% endif %}
                         <td>
                             <div class="prod-buttons">
-                                <a href="{% url 'breakage' breakage.pk %}" class="edit-btn">לצפות</a>
+                                <a href="{% if breakage.user.is_admin or breakage.user.pk != user.pk %}{% url 'breakage' breakage.pk %}{% else %}#{% endif %}" class="edit-btn">לצפות</a>
                             </div>
                         </td>
                         <td>{{ breakage.broke_at|date:"SHORT_DATETIME_FORMAT" }}</td>
