--- a/base/templates/base/navbar_buttons/breakages_button.html
+++ b/base/templates/base/navbar_buttons/breakages_button.html
@@ -1,5 +1,5 @@
 <li>
-    <a href="{% url 'in_repair' %}">
+    <a href="{% url 'breakages' %}">
         <svg width="20px"
              height="20px"
              viewBox="0 0 24 24"
