--- a/base/templates/base/user_manipulations/edit_user.html
+++ b/base/templates/base/user_manipulations/edit_user.html
@@ -86,7 +86,7 @@
                         לא
                     </option>
                 </select>
-                <label for="reject_request">דחית בקשת השאלה</label>
+                <label for="reject_request">דחיית בקשת השאלה</label>
                 <select name="reject_request" id="reject_request">
                     <option value="1" {% if moderator.reject_request %}selected{% endif %} required>
                         כן
@@ -101,6 +101,15 @@
                         כן
                     </option>
                     <option value="0" {% if not moderator.finish_borrowing %}selected{% endif %} required>
+                        לא
+                    </option>
+                </select>
+                <label for="mark_repaired">סימון פריט כתוקן</label>
+                <select name="mark_repaired" id="mark_repaired">
+                    <option value="1" {% if not moderator.mark_repaired %}selected{% endif %} required>
+                        כן
+                    </option>
+                    <option value="0" {% if not moderator.mark_repaired %}selected{% endif %} required>
                         לא
                     </option>
                 </select>
