--- a/base/templates/base/login/set_password.html
+++ b/base/templates/base/login/set_password.html
@@ -1,4 +1,4 @@
 {% extends "base/login/main.html" %}
     {% block content %}
-        {% include "base/change_password.html" %}
+        {% include "base/login/change_password.html" %}
     {% endblock content %}
