--- a/base/templates/base/change_password.html
+++ b/base/templates/base/change_password.html
@@ -1,10 +1,13 @@
-<div class="login-form">
-    <form method="post">
-        {% csrf_token %}
-        {% for field in form %}
-            <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-            {{ field }}
-        {% endfor %}
-        <input type="submit" value="אישור"/>
-    </form>
-</div>
+{% extends "main.html" %}
+{% block content %}
+    <div class="add_user">
+        <form method="post">
+            {% csrf_token %}
+            {% for field in form %}
+                <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                {{ field }}
+            {% endfor %}
+            <input type="submit" value="אישור"/>
+        </form>
+    </div>
+{% endblock content %}
