--- a/base/templates/base/reset_password/reset_password_confirm.html
+++ b/base/templates/base/reset_password/reset_password_confirm.html
@@ -1,4 +1,4 @@
 {% extends "base/reset_password/main.html" %}
 {% block content %}
-    {% include "base/change_password.html" %}
+    {% include "base/login/change_password.html" %}
 {% endblock content %}
