--- a/base/templates/base/change_password.html
+++ b/base/templates/base/change_password.html
@@ -1,13 +1,15 @@
 {% extends "main.html" %}
 {% block content %}
-    <div class="add_user">
+    <div class="change-password">
         <form method="post">
             {% csrf_token %}
             {% for field in form %}
                 <label for="{{ field.id_for_label }}">{{ field.label }}</label>
                 {{ field }}
             {% endfor %}
-            <input type="submit" value="אישור"/>
+            <div>
+                <input type="submit" value="אישור"/>
+            </div>
         </form>
     </div>
 {% endblock content %}
