--- a/base/templates/base/user_manipulations/users.html
+++ b/base/templates/base/user_manipulations/users.html
@@ -5,7 +5,10 @@
             <caption>
                 משתמשי האתר
                 <div class="prod-buttons">
-                    <a href="{% url 'add_user' %}" class="edit-btn">הוספת משתמש</a>
+                    <a href="{% url 'add_user' %}" class="edit-btn">הוספת משתמש בודד</a>
+                </div>
+                <div class="prod-buttons">
+                    <a href="#" class="edit-btn">הוספת משתמשים</a>
                 </div>
             </caption>
             <colgroup>
